GH-1415 Fix sonar warnings